--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,700;0,800;1,300&family=Rubik+Mono+One&display=swap");
+
 .container {
   min-height: 100vh;
   padding: 0 0.5rem;
@@ -8,12 +10,30 @@
 }
 
 .main {
-  padding: 5rem 0;
+  padding: 5rem;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-image: url("../public/blob-background.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.main h1 {
+  font-size: 3rem;
+  font-family: "Rubik Mono One", "Courier New", Courier, monospace;
+}
+
+.main p {
+  font-size: 1.5rem;
+  font-family: "Montserrat", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.main a {
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 .footer {
@@ -23,6 +43,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: "Montserrat", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .footer img {
